--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,38 @@
 <h1>Posts</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                #
+            </th>
+            <th>
+                Date
+            </th>
+            <th>
+                User
+            </th>
+            <th>
+                Rationale
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <% @post.each do |post| %>
+            <tr>
+                <td>
+                    <%= post.id %>
+                </td>
+                <td>
+                    <%= post.date %>
+                </td>
+                <td>
+                    <%= post.user.last_name %>
+                </td>
+                <td>
+                    <%= post.rationale %>
+                </td>
+            </tr>
+        <% end %>
+    </tbody>
+</table>
