adding truncate to post index, in case of long rationale

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,7 +30,7 @@
                     <%= post.user.last_name %>
                 </td>
                 <td>
-                    <%= post.rationale %>
+                    <%= truncate(post.rationale) %>
                 </td>
             </tr>
         <% end %>
