--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,21 +18,6 @@
         </tr>
     </thead>
     <tbody>
-        <% @post.each do |post| %>
-            <tr>
-                <td>
-                    <%= post.id %>
-                </td>
-                <td>
-                    <%= post.date %>
-                </td>
-                <td>
-                    <%= post.user.last_name %>
-                </td>
-                <td>
-                    <%= truncate(post.rationale) %>
-                </td>
-            </tr>
-        <% end %>
+        <%= render @post %>
     </tbody>
 </table>
