--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,6 +8,9 @@
     <li class="nav-item <%= active?(posts_path) %>">
         <%= link_to "Time Entries", posts_path %>
     </li>
+    <li class="nav-item <%= active?(new_post_path) %>">
+        <%= link_to "Add New Entry", new_post_path, id: 'new_post_from_nav' %>
+    </li>
     <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
