--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,17 @@
-<%= form_for @post do |f| %>
+<%= form_for @post, html: {role: "form"} do |f| %>
+    <div class="form-group">
+        <%= f.label :date %>
+        <%= f.date_field :date, class: "form-control"  %>
+    </div>
+    <div class="form-group">
+        <%= f.label :rationale %>
+        <%= f.text_area :rationale, class: "form-control" %>
+    </div>
+    <div>
 
-    <%= f.date_field :date %>
-    <%= f.text_area :rationale %>
-    <%= f.submit 'Save' %>
+    </div>
+
+
+    <%= f.submit 'Save', class: "btn btn-primary btn-block" %>
 
 <% end %>
