--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,16 +1,20 @@
 <%= form_for @post, html: {role: "form"} do |f| %>
+
+    <% if @post.errors.any? %>
+        <% @post.errors.full_messages.each do |error| %>
+            <%= js add_gritter(error, title: "Overtime App notification", sticky: false)  %>
+        <% end %>
+    <% end %>
+
     <div class="form-group">
         <%= f.label :date %>
         <%= f.date_field :date, class: "form-control"  %>
     </div>
+
     <div class="form-group">
         <%= f.label :rationale %>
         <%= f.text_area :rationale, class: "form-control" %>
     </div>
-    <div>
-
-    </div>
-
 
     <%= f.submit 'Save', class: "btn btn-primary btn-block" %>
 
