--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -16,7 +16,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
             <ul class="dropdown-menu">
             <li>
-                <%= link_to "Edit Details", edit_user_registration_path %>
+                <%= link_to "TODO: Admin Dashboard", root_path %>
             </li>
             <div class="divider"></div>
             <li>
