fixed gritter notifications/alerts/errors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,6 @@
             </div>
         </div>
     </div>
-
-    <%= js add_gritter(flash[:notice], title: "Overtime App Notification", sticky: false, time: 4000, image: :notice ) %>
+    <%= render 'shared/alerts' %>
   </body>
 </html>
